[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Networking/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Art/UI/hover.png" type="Texture" id=2]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=3]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerUI" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -32.0
margin_right = 69.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="MultiplayerUI"]
margin_right = 138.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "Host"

[node name="JoinButton" type="Button" parent="MultiplayerUI"]
margin_top = 41.0
margin_right = 138.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
text = "Join"

[node name="SpectateButton" type="Button" parent="MultiplayerUI"]
margin_top = 82.0
margin_right = 138.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 3 )
text = "Spectate"

[node name="BackButton" type="Button" parent="MultiplayerUI"]
margin_top = 123.0
margin_right = 138.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 3 )
text = "Back to Menu"

[node name="WaitLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -7.0
margin_right = 124.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Waiting"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckSelector" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="DeckSelector"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DeckSelector"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeckSelector/VBoxContainer"]
margin_right = 75.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Select Deck"
align = 1

[node name="BackButton" type="Button" parent="DeckSelector/VBoxContainer"]
margin_top = 18.0
margin_right = 75.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="IPSet" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="IPSet"]
margin_left = -104.0
margin_top = 8.0
margin_right = 105.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="IPSet/HBoxContainer"]
margin_top = 5.0
margin_right = 77.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "IP Address: "

[node name="LineEdit" type="LineEdit" parent="IPSet/HBoxContainer"]
margin_left = 81.0
margin_right = 209.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = ExtResource( 3 )
text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="IPSet"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = 20.0
margin_right = 45.5
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="IPSet"]
margin_left = -25.5
margin_top = 72.0
margin_right = 65.5
margin_bottom = 92.0
custom_fonts/font = ExtResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MultiplayerUI/HostButton" to="." method="hostButtonPressed"]
[connection signal="pressed" from="MultiplayerUI/JoinButton" to="." method="joinButtonPressed"]
[connection signal="pressed" from="MultiplayerUI/SpectateButton" to="." method="spectateButtonPressed"]
[connection signal="pressed" from="MultiplayerUI/BackButton" to="." method="backButtonPressed"]
[connection signal="pressed" from="DeckSelector/VBoxContainer/BackButton" to="." method="onBackButtonClicked"]
[connection signal="pressed" from="IPSet/JoinButton" to="." method="ipJoinButtonPressed"]
[connection signal="pressed" from="IPSet/BackButton" to="." method="ipBackButtonPressed"]
